<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:text="Welcome"
            android:textColor="@color/lightBtnColor"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Barbershop"
            android:textColor="@color/lightBtnColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_option"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/person" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="User Name..."
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_option"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="Password"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:paddingLeft="10dp"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="16dp"
            android:background="@drawable/backgroundbuttonpurple"
            android:onClick="onclick"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:text="Login"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>