<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:title="Home"
        android:icon="@drawable/home_icon"/>
    <item
        android:id="@+id/bookingFragment"
        android:title="Booking"
        android:icon="@drawable/icon_book"/>
    <item
        android:id="@+id/shopFragment"
        android:title="Shop"
        android:icon="@drawable/icon_keranjang"/>
    <item
        android:id="@+id/profileFragment"
        android:title="Profile"
        android:icon="@drawable/icon_person"/>
</menu>